updating setup file

--- a/ILonly.ipynb
+++ b/ILonly.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -52,11 +52,11 @@
        "      <th>unique_id</th>\n",
        "      <th>CandName</th>\n",
        "      <th>party</th>\n",
-       "      <th>precinctsreportingpct</th>\n",
+       "      <th>precinctsreporting</th>\n",
        "      <th>votecount</th>\n",
-       "      <th>votepct</th>\n",
+       "      <th>precinctstotal</th>\n",
        "      <th>totalvotes</th>\n",
-       "      <th>precinctsreportingpct_dupage</th>\n",
+       "      <th>precinctsreportingpct</th>\n",
        "      <th>...</th>\n",
        "      <th>votepct_will</th>\n",
        "      <th>totalvotes_will</th>\n",
@@ -80,15 +80,15 @@
        "      <td>Dem</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>3668</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>100</td>\n",
+       "      <td>1</td>\n",
        "      <td>989</td>\n",
-       "      <td>19.0</td>\n",
+       "      <td>0.189827</td>\n",
        "      <td>5210</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -104,15 +104,15 @@
        "      <td>Dem</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>3668</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>100</td>\n",
+       "      <td>1</td>\n",
        "      <td>802</td>\n",
-       "      <td>15.4</td>\n",
+       "      <td>0.153935</td>\n",
        "      <td>5210</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -128,15 +128,15 @@
        "      <td>GOP</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>3668</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>100</td>\n",
+       "      <td>1</td>\n",
        "      <td>867</td>\n",
-       "      <td>26.3</td>\n",
+       "      <td>0.263046</td>\n",
        "      <td>3296</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -149,15 +149,15 @@
        "</div>"
       ],
       "text/plain": [
-       "  dhID    chiID   unique_id         CandName party  precinctsreportingpct  \\\n",
-       "0    1  0010001  polid-1746  Hillary Clinton   Dem                      0   \n",
-       "1    1  0010006  polid-1445   Bernie Sanders   Dem                      0   \n",
-       "2    2  0163003  polid-8639     Donald Trump   GOP                      0   \n",
+       "  dhID    chiID   unique_id         CandName party  precinctsreporting  \\\n",
+       "0    1  0010001  polid-1746  Hillary Clinton   Dem                   0   \n",
+       "1    1  0010006  polid-1445   Bernie Sanders   Dem                   0   \n",
+       "2    2  0163003  polid-8639     Donald Trump   GOP                   0   \n",
        "\n",
-       "   votecount  votepct  totalvotes  precinctsreportingpct_dupage  \\\n",
-       "0          0        0           0                             0   \n",
-       "1          0        0           0                             0   \n",
-       "2          0        0           0                             0   \n",
+       "   votecount  precinctstotal  totalvotes  precinctsreportingpct  \\\n",
+       "0          0            3668           0                      0   \n",
+       "1          0            3668           0                      0   \n",
+       "2          0            3668           0                      0   \n",
        "\n",
        "           ...           votepct_will  totalvotes_will  \\\n",
        "0          ...                      0                0   \n",
@@ -165,9 +165,9 @@
        "2          ...                      0                0   \n",
        "\n",
        "   precinctsreportingpct_chi  votecount_chi  votepct_chi  totalvotes_chi  \\\n",
-       "0                        100            989         19.0            5210   \n",
-       "1                        100            802         15.4            5210   \n",
-       "2                        100            867         26.3            3296   \n",
+       "0                          1            989     0.189827            5210   \n",
+       "1                          1            802     0.153935            5210   \n",
+       "2                          1            867     0.263046            3296   \n",
        "\n",
        "   precinctsreportingpct_statewide  votecount_statewide  votepct_statewide  \\\n",
        "0                                0                    0                  0   \n",
@@ -182,7 +182,7 @@
        "[3 rows x 37 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,11 +190,12 @@
    "source": [
     "#You need an account with AP to use their API\n",
     "# NOTE this is set up for tests, not live\n",
-    "election = Election(electiondate='2016-03-15', testresults=True, liveresults=False, is_test=True)\n",
+    "election = Election(electiondate='2016-03-15', testresults=False, liveresults=True, is_test=False)\n",
     "df=pd.read_csv('ILcands.csv', dtype=object)\n",
     "\n",
     "# this is the list of results using serialize\n",
     "races = pd.DataFrame([f.serialize() for f in election.results])\n",
+    "races.to_csv('csv/races' + str( datetime.now() ) + '.csv', index=False, encoding=\"utf-8\")\n",
     "\n",
     "allraces = races[['raceid','unique_id','first', 'last', 'officename', 'party', 'reportingunitid', 'statename' , 'reportingunitname', 'precinctsreportingpct', 'precinctsreporting', 'precinctstotal', 'votecount', 'votepct','winner']]\n",
     "racecols3 = pd.DataFrame( allraces.loc[ (allraces[\"statename\"] == \"Illinois\" ) ] )\n",
@@ -205,7 +206,7 @@
     "# First -- Cook all\n",
     "df_cook = pd.DataFrame( racecols.loc[ (racecols[\"reportingunitid\"] == \"county-14016\" ) ] )\n",
     "df_cook['totalvotes'] = df_cook['votecount'].groupby(df_cook['raceid']).transform('sum')\n",
-    "df_cook = df_cook[['unique_id', 'precinctsreportingpct', 'votecount', 'votepct', 'totalvotes' ]]\n",
+    "df_cook = df_cook[['unique_id', 'precinctsreporting','votecount','precinctstotal', 'totalvotes' ]]\n",
     "left = df\n",
     "right = df_cook\n",
     "df = pd.merge(left, right, how='left', on='unique_id', suffixes=('', '_cook'))\n",
@@ -265,15 +266,17 @@
     "# Working the data\n",
     "df_chi['votecount'] = df_chi[\"votecount\"].astype(float)\n",
     "df_chi['precinctsreportingpct'] = df_chi[\"prec_in\"].astype(float) / df_chi[\"prec_total\"].astype(float)\n",
-    "df_chi['precinctsreportingpct'] = pd.Series([round(val * 100, 1) for val in df_chi['precinctsreportingpct']], index = df_chi.index)\n",
+    "#df_chi['precinctsreportingpct'] = pd.Series([round(val * 100, 1) for val in df_chi['precinctsreportingpct']], index = df_chi.index)\n",
     "\n",
     "# Groups by race and sums up all votes in race, assigns to all votes\n",
     "df_chi['totalvotes'] = df_chi['votecount'].groupby(df_chi['race']).transform('sum')\n",
     "#allvotes = df['votes'].groupby(df['race']).transform('sum')\n",
     "df_chi['votepct'] = df_chi[\"votecount\"] / df_chi[\"totalvotes\"]\n",
-    "df_chi['votepct'] = pd.Series([round(val * 100, 1) for val in df_chi['votepct']], index = df_chi.index)\n",
+    "#df_chi['votepct'] = pd.Series([round(val * 100, 1) for val in df_chi['votepct']], index = df_chi.index)\n",
     "\n",
     "chiDF = df_chi[['chiID', 'precinctsreportingpct', 'votecount', 'votepct', 'totalvotes' ]]\n",
+    "chiDF.to_csv('csv/chiDF' + str( datetime.now() ) + '.csv', index=False, encoding=\"utf-8\")\n",
+    "\n",
     "# Joins chi data\n",
     "left = df\n",
     "right = chiDF\n",
