--- a/fiveStates.ipynb
+++ b/fiveStates.ipynb
@@ -206,8 +206,8 @@
     "racecols1 = pd.DataFrame( racecols2.loc[ (racecols2[\"level\"] == \"state\" ) ] )\n",
     "racecols = pd.DataFrame( racecols1.loc[ ( racecols1['unique_id'].isin(['polid-1746','polid-1445','polid-8639','polid-61815','polid-53044','polid-36679' ]) ) ] )\n",
     "racecols.sort_values(['statename', 'party', 'last'], ascending=[True, True, False], inplace=True)\n",
-    "racecols['precinctsreportingpct'] = pd.Series([round(val, 1) for val in racecols['precinctsreportingpct']], index = racecols.index)\n",
-    "racecols['votepct'] = pd.Series([round(val * 100, 1) for val in racecols['votepct']], index = racecols.index)\n",
+    "#racecols['precinctsreportingpct'] = pd.Series([round(val, 1) for val in racecols['precinctsreportingpct']], index = racecols.index)\n",
+    "#racecols['votepct'] = pd.Series([round(val * 100, 1) for val in racecols['votepct']], index = racecols.index)\n",
     "\n",
     "# First state - Illinois\n",
     "df_Illinois = pd.DataFrame( racecols.loc[ (racecols[\"statename\"] == \"Illinois\" ) ] )\n",
