minor corrections, but working well

--- a/ILonly.ipynb
+++ b/ILonly.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -78,22 +78,22 @@
        "      <td>polid-1746</td>\n",
        "      <td>Hillary Clinton</td>\n",
        "      <td>Dem</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2547</td>\n",
+       "      <td>415579</td>\n",
        "      <td>3668</td>\n",
-       "      <td>0</td>\n",
+       "      <td>776100</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>989</td>\n",
-       "      <td>0.189827</td>\n",
-       "      <td>5210</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.730788</td>\n",
+       "      <td>267725</td>\n",
+       "      <td>0.538369</td>\n",
+       "      <td>497289</td>\n",
+       "      <td>33.10</td>\n",
+       "      <td>482862</td>\n",
+       "      <td>0.525469</td>\n",
+       "      <td>918916</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -102,22 +102,22 @@
        "      <td>polid-1445</td>\n",
        "      <td>Bernie Sanders</td>\n",
        "      <td>Dem</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2547</td>\n",
+       "      <td>353746</td>\n",
        "      <td>3668</td>\n",
-       "      <td>0</td>\n",
+       "      <td>776100</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>802</td>\n",
-       "      <td>0.153935</td>\n",
-       "      <td>5210</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.730788</td>\n",
+       "      <td>224469</td>\n",
+       "      <td>0.451385</td>\n",
+       "      <td>497289</td>\n",
+       "      <td>33.10</td>\n",
+       "      <td>428206</td>\n",
+       "      <td>0.465990</td>\n",
+       "      <td>918916</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -126,22 +126,22 @@
        "      <td>polid-8639</td>\n",
        "      <td>Donald Trump</td>\n",
        "      <td>GOP</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2547</td>\n",
+       "      <td>88809</td>\n",
        "      <td>3668</td>\n",
-       "      <td>0</td>\n",
+       "      <td>216359</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>867</td>\n",
-       "      <td>0.263046</td>\n",
-       "      <td>3296</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.730788</td>\n",
+       "      <td>24527</td>\n",
+       "      <td>0.396338</td>\n",
+       "      <td>61884</td>\n",
+       "      <td>32.28</td>\n",
+       "      <td>150323</td>\n",
+       "      <td>0.401688</td>\n",
+       "      <td>374228</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -150,14 +150,14 @@
       ],
       "text/plain": [
        "  dhID    chiID   unique_id         CandName party  precinctsreporting  \\\n",
-       "0    1  0010001  polid-1746  Hillary Clinton   Dem                   0   \n",
-       "1    1  0010006  polid-1445   Bernie Sanders   Dem                   0   \n",
-       "2    2  0163003  polid-8639     Donald Trump   GOP                   0   \n",
+       "0    1  0010001  polid-1746  Hillary Clinton   Dem                2547   \n",
+       "1    1  0010006  polid-1445   Bernie Sanders   Dem                2547   \n",
+       "2    2  0163003  polid-8639     Donald Trump   GOP                2547   \n",
        "\n",
        "   votecount  precinctstotal  totalvotes  precinctsreportingpct  \\\n",
-       "0          0            3668           0                      0   \n",
-       "1          0            3668           0                      0   \n",
-       "2          0            3668           0                      0   \n",
+       "0     415579            3668      776100                      0   \n",
+       "1     353746            3668      776100                      0   \n",
+       "2      88809            3668      216359                      0   \n",
        "\n",
        "           ...           votepct_will  totalvotes_will  \\\n",
        "0          ...                      0                0   \n",
@@ -165,24 +165,24 @@
        "2          ...                      0                0   \n",
        "\n",
        "   precinctsreportingpct_chi  votecount_chi  votepct_chi  totalvotes_chi  \\\n",
-       "0                          1            989     0.189827            5210   \n",
-       "1                          1            802     0.153935            5210   \n",
-       "2                          1            867     0.263046            3296   \n",
+       "0                   0.730788         267725     0.538369          497289   \n",
+       "1                   0.730788         224469     0.451385          497289   \n",
+       "2                   0.730788          24527     0.396338           61884   \n",
        "\n",
        "   precinctsreportingpct_statewide  votecount_statewide  votepct_statewide  \\\n",
-       "0                                0                    0                  0   \n",
-       "1                                0                    0                  0   \n",
-       "2                                0                    0                  0   \n",
+       "0                            33.10               482862           0.525469   \n",
+       "1                            33.10               428206           0.465990   \n",
+       "2                            32.28               150323           0.401688   \n",
        "\n",
        "   totalvotes_statewide  \n",
-       "0                     0  \n",
-       "1                     0  \n",
-       "2                     0  \n",
+       "0                918916  \n",
+       "1                918916  \n",
+       "2                374228  \n",
        "\n",
        "[3 rows x 37 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
     "\n",
     "# this is the list of results using serialize\n",
     "races = pd.DataFrame([f.serialize() for f in election.results])\n",
-    "races.to_csv('csv/races' + str( datetime.now() ) + '.csv', index=False, encoding=\"utf-8\")\n",
+    "#races.to_csv('csv/races' + str( datetime.now() ) + '.csv', index=False, encoding=\"utf-8\")\n",
     "\n",
     "allraces = races[['raceid','unique_id','first', 'last', 'officename', 'party', 'reportingunitid', 'statename' , 'reportingunitname', 'precinctsreportingpct', 'precinctsreporting', 'precinctstotal', 'votecount', 'votepct','winner']]\n",
     "racecols3 = pd.DataFrame( allraces.loc[ (allraces[\"statename\"] == \"Illinois\" ) ] )\n",
@@ -249,11 +249,11 @@
     "# ___________________________________________________________\n",
     "# Grabbing the Chicago data\n",
     "#Reading info from a url-basedtext file\n",
-    "url=\"http://www.chicagoelections.com/results/ap/summary.txt\"\n",
+    "url=\"http://www.chicagoelections.com/ap/summary.txt\"\n",
     "#this is for when it goes to that string only\n",
-    "#s=requests.get(url).content\n",
-    "#df_chi=pd.read_csv(io.StringIO(s.decode('utf-8')))\n",
-    "df_chi=pd.read_csv('SummaryExport.txt')\n",
+    "s=requests.get(url).content\n",
+    "df_chi=pd.read_csv(io.StringIO(s.decode('utf-8')))\n",
+    "#df_chi=pd.read_csv('SummaryExport.txt')\n",
     "\n",
     "# Parsing the file\n",
     "df_chi.columns = ['a']\n",
@@ -275,7 +275,7 @@
     "#df_chi['votepct'] = pd.Series([round(val * 100, 1) for val in df_chi['votepct']], index = df_chi.index)\n",
     "\n",
     "chiDF = df_chi[['chiID', 'precinctsreportingpct', 'votecount', 'votepct', 'totalvotes' ]]\n",
-    "chiDF.to_csv('csv/chiDF' + str( datetime.now() ) + '.csv', index=False, encoding=\"utf-8\")\n",
+    "#chiDF.to_csv('csv/chiDF' + str( datetime.now() ) + '.csv', index=False, encoding=\"utf-8\")\n",
     "\n",
     "# Joins chi data\n",
     "left = df\n",
