--- a/fiveStates.ipynb
+++ b/fiveStates.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -66,128 +66,128 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>10001</td>\n",
+       "      <td>0010001</td>\n",
        "      <td>polid-1746</td>\n",
        "      <td>Hillary Clinton</td>\n",
        "      <td>Dem</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>33.10</td>\n",
+       "      <td>0.525469</td>\n",
+       "      <td>40.26</td>\n",
+       "      <td>0.579881</td>\n",
+       "      <td>52.64</td>\n",
+       "      <td>0.554412</td>\n",
+       "      <td>16.21</td>\n",
+       "      <td>0.480927</td>\n",
+       "      <td>95.94</td>\n",
+       "      <td>0.644845</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>10006</td>\n",
+       "      <td>0010006</td>\n",
        "      <td>polid-1445</td>\n",
        "      <td>Bernie Sanders</td>\n",
        "      <td>Dem</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>33.10</td>\n",
+       "      <td>0.465990</td>\n",
+       "      <td>40.26</td>\n",
+       "      <td>0.410081</td>\n",
+       "      <td>52.64</td>\n",
+       "      <td>0.402349</td>\n",
+       "      <td>16.21</td>\n",
+       "      <td>0.499741</td>\n",
+       "      <td>95.94</td>\n",
+       "      <td>0.332139</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
-       "      <td>163003</td>\n",
+       "      <td>0163003</td>\n",
        "      <td>polid-8639</td>\n",
        "      <td>Donald Trump</td>\n",
        "      <td>GOP</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>32.28</td>\n",
+       "      <td>0.401688</td>\n",
+       "      <td>40.09</td>\n",
+       "      <td>0.368692</td>\n",
+       "      <td>52.34</td>\n",
+       "      <td>0.401910</td>\n",
+       "      <td>16.21</td>\n",
+       "      <td>0.426667</td>\n",
+       "      <td>95.94</td>\n",
+       "      <td>0.457261</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2</td>\n",
-       "      <td>163004</td>\n",
+       "      <td>0163004</td>\n",
        "      <td>polid-61815</td>\n",
        "      <td>Ted Cruz</td>\n",
        "      <td>GOP</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>32.28</td>\n",
+       "      <td>0.259182</td>\n",
+       "      <td>40.09</td>\n",
+       "      <td>0.145403</td>\n",
+       "      <td>52.34</td>\n",
+       "      <td>0.364099</td>\n",
+       "      <td>16.21</td>\n",
+       "      <td>0.403372</td>\n",
+       "      <td>95.94</td>\n",
+       "      <td>0.170909</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2</td>\n",
-       "      <td>163005</td>\n",
+       "      <td>0163005</td>\n",
        "      <td>polid-53044</td>\n",
        "      <td>Marco Rubio</td>\n",
        "      <td>GOP</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>32.28</td>\n",
+       "      <td>0.094119</td>\n",
+       "      <td>40.09</td>\n",
+       "      <td>0.029225</td>\n",
+       "      <td>52.34</td>\n",
+       "      <td>0.082765</td>\n",
+       "      <td>16.21</td>\n",
+       "      <td>0.059552</td>\n",
+       "      <td>95.94</td>\n",
+       "      <td>0.269816</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   dhID   chiID    unique_id         CandName party  precinctsreportingpct  \\\n",
-       "0     1   10001   polid-1746  Hillary Clinton   Dem                      0   \n",
-       "1     1   10006   polid-1445   Bernie Sanders   Dem                      0   \n",
-       "2     2  163003   polid-8639     Donald Trump   GOP                      0   \n",
-       "3     2  163004  polid-61815         Ted Cruz   GOP                      0   \n",
-       "4     2  163005  polid-53044      Marco Rubio   GOP                      0   \n",
+       "  dhID    chiID    unique_id         CandName party  precinctsreportingpct  \\\n",
+       "0    1  0010001   polid-1746  Hillary Clinton   Dem                  33.10   \n",
+       "1    1  0010006   polid-1445   Bernie Sanders   Dem                  33.10   \n",
+       "2    2  0163003   polid-8639     Donald Trump   GOP                  32.28   \n",
+       "3    2  0163004  polid-61815         Ted Cruz   GOP                  32.28   \n",
+       "4    2  0163005  polid-53044      Marco Rubio   GOP                  32.28   \n",
        "\n",
-       "   votepct  precinctsreportingpct_Ohio  votepct_Ohio  \\\n",
-       "0        0                           0             0   \n",
-       "1        0                           0             0   \n",
-       "2        0                           0             0   \n",
-       "3        0                           0             0   \n",
-       "4        0                           0             0   \n",
+       "    votepct  precinctsreportingpct_Ohio  votepct_Ohio  \\\n",
+       "0  0.525469                       40.26      0.579881   \n",
+       "1  0.465990                       40.26      0.410081   \n",
+       "2  0.401688                       40.09      0.368692   \n",
+       "3  0.259182                       40.09      0.145403   \n",
+       "4  0.094119                       40.09      0.029225   \n",
        "\n",
        "   precinctsreportingpct_NC  votepct_NC  precinctsreportingpct_Missouri  \\\n",
-       "0                         0           0                               0   \n",
-       "1                         0           0                               0   \n",
-       "2                         0           0                               0   \n",
-       "3                         0           0                               0   \n",
-       "4                         0           0                               0   \n",
+       "0                     52.64    0.554412                           16.21   \n",
+       "1                     52.64    0.402349                           16.21   \n",
+       "2                     52.34    0.401910                           16.21   \n",
+       "3                     52.34    0.364099                           16.21   \n",
+       "4                     52.34    0.082765                           16.21   \n",
        "\n",
        "   votepct_Missouri  precinctsreportingpct_Florida  votepct_Florida  \n",
-       "0                 0                              0                0  \n",
-       "1                 0                              0                0  \n",
-       "2                 0                              0                0  \n",
-       "3                 0                              0                0  \n",
-       "4                 0                              0                0  "
+       "0          0.480927                          95.94         0.644845  \n",
+       "1          0.499741                          95.94         0.332139  \n",
+       "2          0.426667                          95.94         0.457261  \n",
+       "3          0.403372                          95.94         0.170909  \n",
+       "4          0.059552                          95.94         0.269816  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,8 +195,8 @@
    "source": [
     "# NOTE this is set up for tests, not live\n",
     "# also, to use AP's API you need an account with a key\n",
-    "election = Election(electiondate='2016-03-15', testresults=True, liveresults=False, is_test=True)\n",
-    "df=pd.read_csv('ILcands_prez.csv')\n",
+    "election = Election(electiondate='2016-03-15', testresults=False, liveresults=True, is_test=False)\n",
+    "df=pd.read_csv('ILcands_prez.csv', dtype=object)\n",
     "\n",
     "# this is the list of results using serialize\n",
     "races = pd.DataFrame([f.serialize() for f in election.results])\n",
