--- a/ILonly.ipynb
+++ b/ILonly.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -78,22 +78,22 @@
        "      <td>polid-1746</td>\n",
        "      <td>Hillary Clinton</td>\n",
        "      <td>Dem</td>\n",
-       "      <td>2547</td>\n",
-       "      <td>415579</td>\n",
+       "      <td>3633</td>\n",
+       "      <td>607816</td>\n",
        "      <td>3668</td>\n",
-       "      <td>776100</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1134932</td>\n",
+       "      <td>100</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.730788</td>\n",
-       "      <td>267725</td>\n",
-       "      <td>0.538369</td>\n",
-       "      <td>497289</td>\n",
-       "      <td>33.10</td>\n",
-       "      <td>482862</td>\n",
-       "      <td>0.525469</td>\n",
-       "      <td>918916</td>\n",
+       "      <td>0.471085</td>\n",
+       "      <td>88415</td>\n",
+       "      <td>0.983084</td>\n",
+       "      <td>362161</td>\n",
+       "      <td>0.535761</td>\n",
+       "      <td>675975</td>\n",
+       "      <td>98.69</td>\n",
+       "      <td>989238</td>\n",
+       "      <td>0.503533</td>\n",
+       "      <td>1964595</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -102,22 +102,22 @@
        "      <td>polid-1445</td>\n",
        "      <td>Bernie Sanders</td>\n",
        "      <td>Dem</td>\n",
-       "      <td>2547</td>\n",
-       "      <td>353746</td>\n",
+       "      <td>3633</td>\n",
+       "      <td>517549</td>\n",
        "      <td>3668</td>\n",
-       "      <td>776100</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1134932</td>\n",
+       "      <td>100</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.730788</td>\n",
-       "      <td>224469</td>\n",
-       "      <td>0.451385</td>\n",
-       "      <td>497289</td>\n",
-       "      <td>33.10</td>\n",
-       "      <td>428206</td>\n",
-       "      <td>0.465990</td>\n",
-       "      <td>918916</td>\n",
+       "      <td>0.523723</td>\n",
+       "      <td>88415</td>\n",
+       "      <td>0.983084</td>\n",
+       "      <td>307121</td>\n",
+       "      <td>0.454338</td>\n",
+       "      <td>675975</td>\n",
+       "      <td>98.69</td>\n",
+       "      <td>959111</td>\n",
+       "      <td>0.488198</td>\n",
+       "      <td>1964595</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -126,22 +126,22 @@
        "      <td>polid-8639</td>\n",
        "      <td>Donald Trump</td>\n",
        "      <td>GOP</td>\n",
-       "      <td>2547</td>\n",
-       "      <td>88809</td>\n",
+       "      <td>3633</td>\n",
+       "      <td>122865</td>\n",
        "      <td>3668</td>\n",
-       "      <td>216359</td>\n",
-       "      <td>0</td>\n",
+       "      <td>301670</td>\n",
+       "      <td>100</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.730788</td>\n",
-       "      <td>24527</td>\n",
-       "      <td>0.396338</td>\n",
-       "      <td>61884</td>\n",
-       "      <td>32.28</td>\n",
-       "      <td>150323</td>\n",
-       "      <td>0.401688</td>\n",
-       "      <td>374228</td>\n",
+       "      <td>0.464007</td>\n",
+       "      <td>82988</td>\n",
+       "      <td>0.983084</td>\n",
+       "      <td>32447</td>\n",
+       "      <td>0.386403</td>\n",
+       "      <td>83972</td>\n",
+       "      <td>98.69</td>\n",
+       "      <td>540774</td>\n",
+       "      <td>0.388794</td>\n",
+       "      <td>1390901</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -150,39 +150,39 @@
       ],
       "text/plain": [
        "  dhID    chiID   unique_id         CandName party  precinctsreporting  \\\n",
-       "0    1  0010001  polid-1746  Hillary Clinton   Dem                2547   \n",
-       "1    1  0010006  polid-1445   Bernie Sanders   Dem                2547   \n",
-       "2    2  0163003  polid-8639     Donald Trump   GOP                2547   \n",
+       "0    1  0010001  polid-1746  Hillary Clinton   Dem                3633   \n",
+       "1    1  0010006  polid-1445   Bernie Sanders   Dem                3633   \n",
+       "2    2  0163003  polid-8639     Donald Trump   GOP                3633   \n",
        "\n",
        "   votecount  precinctstotal  totalvotes  precinctsreportingpct  \\\n",
-       "0     415579            3668      776100                      0   \n",
-       "1     353746            3668      776100                      0   \n",
-       "2      88809            3668      216359                      0   \n",
+       "0     607816            3668     1134932                    100   \n",
+       "1     517549            3668     1134932                    100   \n",
+       "2     122865            3668      301670                    100   \n",
        "\n",
        "           ...           votepct_will  totalvotes_will  \\\n",
-       "0          ...                      0                0   \n",
-       "1          ...                      0                0   \n",
-       "2          ...                      0                0   \n",
+       "0          ...               0.471085            88415   \n",
+       "1          ...               0.523723            88415   \n",
+       "2          ...               0.464007            82988   \n",
        "\n",
        "   precinctsreportingpct_chi  votecount_chi  votepct_chi  totalvotes_chi  \\\n",
-       "0                   0.730788         267725     0.538369          497289   \n",
-       "1                   0.730788         224469     0.451385          497289   \n",
-       "2                   0.730788          24527     0.396338           61884   \n",
+       "0                   0.983084         362161     0.535761          675975   \n",
+       "1                   0.983084         307121     0.454338          675975   \n",
+       "2                   0.983084          32447     0.386403           83972   \n",
        "\n",
        "   precinctsreportingpct_statewide  votecount_statewide  votepct_statewide  \\\n",
-       "0                            33.10               482862           0.525469   \n",
-       "1                            33.10               428206           0.465990   \n",
-       "2                            32.28               150323           0.401688   \n",
+       "0                            98.69               989238           0.503533   \n",
+       "1                            98.69               959111           0.488198   \n",
+       "2                            98.69               540774           0.388794   \n",
        "\n",
        "   totalvotes_statewide  \n",
-       "0                918916  \n",
-       "1                918916  \n",
-       "2                374228  \n",
+       "0               1964595  \n",
+       "1               1964595  \n",
+       "2               1390901  \n",
        "\n",
        "[3 rows x 37 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,6 @@
     "\n",
     "# this is the list of results using serialize\n",
     "races = pd.DataFrame([f.serialize() for f in election.results])\n",
-    "#races.to_csv('csv/races' + str( datetime.now() ) + '.csv', index=False, encoding=\"utf-8\")\n",
     "\n",
     "allraces = races[['raceid','unique_id','first', 'last', 'officename', 'party', 'reportingunitid', 'statename' , 'reportingunitname', 'precinctsreportingpct', 'precinctsreporting', 'precinctstotal', 'votecount', 'votepct','winner']]\n",
     "racecols3 = pd.DataFrame( allraces.loc[ (allraces[\"statename\"] == \"Illinois\" ) ] )\n",
@@ -240,8 +239,9 @@
     "df = pd.merge(left, right, how='left', on='unique_id', suffixes=('', '_mch'))\n",
     "# Sixth -- Will\n",
     "df_will = pd.DataFrame( racecols.loc[ (racecols[\"reportingunitid\"] == \"county-14099\" ) ] )\n",
+    "#df_will.to_csv('csv/races' + str( datetime.now() ) + '.csv', index=False, encoding=\"utf-8\")\n",
     "df_will['totalvotes'] = df_will['votecount'].groupby(df_will['raceid']).transform('sum')\n",
-    "df_will = df_mch[['unique_id', 'precinctsreportingpct', 'votecount', 'votepct', 'totalvotes' ]]\n",
+    "df_will = df_will[['unique_id', 'precinctsreportingpct', 'votecount', 'votepct', 'totalvotes' ]]\n",
     "left = df\n",
     "right = df_will\n",
     "df = pd.merge(left, right, how='left', on='unique_id', suffixes=('', '_will'))\n",
